--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -1,1 +1,66 @@
 @use './variables' as *;
+
+@mixin tablet {
+    @media screen and (min-width: $tablet-screen) {
+        @content;
+    }
+}
+
+@mixin desktop {
+    @media screen and (min-width: $desktop-screen) {
+        @content;
+    }
+}
+
+@mixin text-header {
+    font-size: 2.5rem;
+    line-height: 1.2;
+    font-weight: 700;
+    font-family: $font-header;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+
+    @include tablet {
+        font-size: 3rem;
+        line-height: 1.3;
+    }
+}
+
+@mixin text-subheader {
+    font-size: 1.75rem;
+    line-height: 1.3;
+    font-weight: 600;
+    font-family: $font-header;
+    text-transform: uppercase;
+    letter-spacing: 0.5px;
+
+    @include tablet {
+        font-size: 2rem; 
+        line-height: 1.4;
+    }
+}
+
+@mixin text-body {
+    font-size: 1rem;
+    line-height: 1.6;
+    font-weight: 400;
+    font-family: $font-body;
+
+    @include tablet {
+        font-size: 1.125rem;
+    }
+}
+
+@mixin text-button {
+    font-size: 0.875rem;
+    line-height: 1.2;
+    font-weight: 500;
+    font-family: $font-body;
+    text-transform: uppercase;
+    letter-spacing: 0.5px;
+
+    @include tablet {
+        font-size: 1rem;
+        line-height: 1.3;
+    }
+}
