--- a/src/styles/partials/_global.scss
+++ b/src/styles/partials/_global.scss
@@ -1,6 +1,22 @@
 @use './variables' as *;
 @use './mixins' as *;
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+ul,
+li {
+  list-style-type: none;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 h1, h2 {
     @include text-header;
 }
