--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -12,6 +12,34 @@
     }
 }
 
+@mixin text-title {
+    font-size: 1.25rem;
+    line-height: 1.2;
+    font-weight: 700;
+    font-family: $font-header;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+
+    @include tablet {
+        font-size: 1rem;
+        line-height: 1.3;
+    }
+}
+
+@mixin text-nav {
+    font-size: 1rem;
+    line-height: 1.2;
+    font-weight: 700;
+    font-family: $font-header;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+
+    @include tablet {
+        font-size: 0.75rem;
+        line-height: 1.3;
+    }
+}
+
 @mixin text-header {
     font-size: 2.5rem;
     line-height: 1.2;
