--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -26,8 +26,8 @@
         gap: 1.5rem;
         @include desktop {
             flex-direction: column;
-            padding: 1.5rem 0;
-            gap: 0.5rem;
+            padding: 1.25rem 0 0.75rem 0;
+            gap: 0.25rem;
         }
     }
     &__logo {
