--- a/src/pages/others/UnderConstructionPage/UnderConstructionPage.scss
+++ b/src/pages/others/UnderConstructionPage/UnderConstructionPage.scss
@@ -1,2 +1,49 @@
 @use '../../../styles/partials/variables' as *;
 @use '../../../styles/partials/mixins' as *;
+
+.under-construction {
+    display: flex;
+    flex-direction: column;
+
+    &__header {
+        display: flex;
+        align-items: center;
+        padding: 76px 0 1rem 1rem;
+        background-color: white;
+        @include text-header;
+        @include desktop {
+            width: 100vw;
+            height: 80.91px;
+            padding-top: 0;
+            padding-bottom: 0;
+            padding-left: 170px;
+        }
+    }
+    &__main-container {
+        display: flex;
+    }
+    &__categories {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 1rem;
+        height: 40vh;
+        background-color: #cdcdcd;
+        border-bottom-right-radius: 0.5rem;
+        border-bottom-left-radius: 0.5rem;
+        width: 100%;
+        border: 1px solid $color-border;
+
+        @include desktop {
+            padding: 1rem 1rem 1rem 170px;
+            flex-direction: column;
+            height: 100vh;
+            width: 100vw;
+            border-radius: 0;
+            border: 0;
+        }
+    }
+    &__cat {
+        max-width: 30vw;
+    }
+}
