--- a/src/pages/notes/NotesDetailsPage/NotesDetailsPage.scss
+++ b/src/pages/notes/NotesDetailsPage/NotesDetailsPage.scss
@@ -1,2 +1,8 @@
 @use '../../../styles/partials/variables' as *;
 @use '../../../styles/partials/mixins' as *;
+
+.note {
+    display: flex;
+    flex-direction: column;
+    
+}
