--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -21,8 +21,9 @@
     letter-spacing: 1px;
 
     @include tablet {
-        font-size: 1rem;
+        font-size: 0.813rem;
         line-height: 1.3;
+        letter-spacing: 2px;
     }
 }
 
@@ -41,16 +42,18 @@
 }
 
 @mixin text-header {
-    font-size: 2.5rem;
+    font-size: 1.25rem;
     line-height: 1.2;
-    font-weight: 700;
+    font-weight: 300;
+    color: $color-text-alt;
     font-family: $font-header;
     text-transform: uppercase;
-    letter-spacing: 1px;
+    letter-spacing: 3px;
 
     @include tablet {
-        font-size: 3rem;
+        font-size: 2rem;
         line-height: 1.3;
+        letter-spacing: 5px;
     }
 }
 
