Add little adustments on partials

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -8,5 +8,8 @@ $color-text-primary: #1C1C1C;
 $color-text-alt: #3D3D3D;
 $color-background-primary: #F4F4F4;
 $color-background-alt: #D8D8D8;
+$color-background-alt2: #FAFAFA;
 $color-border: #A8A8A8;
+$color-accent-alt: #457B9D;
+$color-link: #1B4D89;
 $color-accent-primary: #E63946;
