--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -50,7 +50,7 @@
     text-transform: uppercase;
     letter-spacing: 3px;
 
-    @include tablet {
+    @include desktop {
         font-size: 2rem;
         line-height: 1.3;
         letter-spacing: 5px;
