Make the notes forms styling responsive

--- a/src/components/NotesForm/NotesForm.scss
+++ b/src/components/NotesForm/NotesForm.scss
@@ -2,11 +2,9 @@
 @use '../../styles/partials/mixins' as *;
 
 .notes-form {
-    display: flex;
-    flex-direction: column;
-    @include desktop {
-        padding-left: 10.625rem;
-    }
+  display: flex;
+  flex-direction: column;
+
 
   &__form {
     display: flex;
@@ -14,12 +12,40 @@
     padding: 1.5rem;
     background-color: $color-background-alt2;
     border: 1px solid $color-border;
-    border-radius: 8px;
+    // border-top: none;
+    border-bottom-right-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    // max-width: 100%;
-    // margin: 0 auto;
+
+    @include desktop {
+      padding-left: 10.625rem;
+    }
   }
 
+  &__form-container {
+    display: flex;
+    flex-direction: column;
+    @include desktop {
+      flex-direction: row;
+      gap: 1.5rem;
+    }
+  }
+  &__left-container {
+    display: flex;
+    flex-direction: column;
+    @include desktop {
+      width: 50%;
+      padding-right: 1.5rem;
+      border-right: 1px solid $color-border;
+    }
+  }
+  &__right-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    @include desktop {
+      width: 50%;
+    }
+  }
   &__field {
     margin-bottom: 1rem;
     display: flex;
@@ -49,8 +75,10 @@
       outline: none;
       border-color: $color-accent-alt;
     }
+
     & img {
-      max-width: 600px; /* Limits width to 600px */
+      max-width: 600px;
+      /* Limits width to 600px */
       width: auto;
       height: auto;
     }
