--- a/src/components/PageHeader/PageHeader.scss
+++ b/src/components/PageHeader/PageHeader.scss
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 76px 1rem 1rem 0;
+    padding: 76px 1rem 1rem 1rem;
     background-color: white;
     gap: 1rem;
     @include text-header;
