--- a/src/components/MultiSelectInput/MultiSelectInput.scss
+++ b/src/components/MultiSelectInput/MultiSelectInput.scss
@@ -72,7 +72,7 @@
         flex-wrap: wrap;
         gap: 0.5rem;
         margin-top: 0.75rem;
-        padding: 0.5rem;
+        padding: 0.75rem;
         background-color: $color-background-primary;
         border-radius: 8px;
         min-height: 40px;
@@ -82,10 +82,10 @@
         display: flex;
         align-items: center;
         gap: 0.1rem;
-        background-color: lighten($color-background-alt, 5%);
+        background-color: lighten($color-background-primary, 5%);
         border: 1px solid darken($color-border, 5%);
         border-radius: 16px;
-        padding: 0.1rem 0.5rem;
+        padding: 0.2rem 0.5rem;
         font-size: 0.875rem;
         color: $color-text-primary;
         font-weight: 500;
